1.整理路由;2.添加css引用;

--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,24 @@
 {
-	"presets": [
-  	"es2015",
-  	"react",
- 	],
-	"plugins": []
+  "presets": [
+   "es2015",
+	"react",
+  ],
+  "plugins": [
+     "transform-class-properties",
+    "transform-decorators",
+    "transform-object-rest-spread",
+    "transform-runtime"
+  ],
+    "env": {
+      "node": {
+        "plugins": [
+            [
+                "babel-plugin-transform-require-ignore",
+                {
+                    "extensions": [".scss", ".css"]
+                }
+            ]
+        ]
+      }
+    }
 }
