--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "say something....",
   "main": "main.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=dev supervisor -w server,index.js index",
-    "build": "webpack --colors --profile --display-modules"
+    "start": "cross-env NODE_ENV=dev BABEL_ENV='node' pm2 start index.js --name quick-server",
+    "nodemon": "cross-env BABEL_ENV='node' nodemon index.js",
+    "build": "webpack --colors --profile --display-modules",
+    "build:client": "webpack --config webpack.config.js",
+    "build:server": "BABEL_ENV=server babel src --out-dir ./build/server",
+    "stop": "cross-env NODE_ENV='dev' pm2 delete quick-server",
+    "webpack-devserver": "webpack-dev-server --debug --hot --devtool eval-source-map --output-pathinfo --watch --colors --inline --content-base public --port 8050 --host 0.0.0.0"
   },
   "repository": {
     "type": "git",
@@ -18,6 +23,8 @@
   },
   "homepage": "https://github.com/git-zhangsan/quickPage#readme",
   "dependencies": {
+    "autoprefixer": "^7.1.2",
+    "babel-plugin-css-modules-transform": "^1.2.7",
     "babel-polyfill": "^6.26.0",
     "babel-register": "^6.26.0",
     "body-parser": "^1.17.2",
@@ -30,15 +37,19 @@
     "mongodb": "^2.2.29",
     "morgan": "^1.8.2",
     "node-jsx": "^0.13.3",
+    "postcss-loader": "^2.0.6",
     "qs": "^6.5.0",
     "react-image-mapper": "0.0.4",
-    "transfer-webpack-plugin": "^0.1.4"
+    "transfer-webpack-plugin": "^0.1.4",
+    "url-loader": "^0.5.9"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.1",
+    "babel-plugin-transform-require-ignore": "^0.1.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
@@ -53,13 +64,17 @@
     "eslint-plugin-react": "^7.2.1",
     "extract-text-webpack-plugin": "^2.1.2",
     "html-webpack-plugin": "^2.30.1",
+    "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-hot-loader": "^1.3.1",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "reload": "^1.1.6",
     "requirejs": "^2.3.3",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
     "webpack": "^3.5.5",
     "webpack-dev-middleware": "^1.10.2",
     "webpack-dev-server": "^2.7.1",
