--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
+    "classnames": "^2.2.5",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "css-loader": "^0.28.5",
@@ -67,6 +68,7 @@
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
+    "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-hot-loader": "^1.3.1",
